--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://hitesh:use-your-password@cluster0.fhkirqa.mongodb.net
+MONGODB_URI=mongodb+srv://KASHIF:use-your-password@cluster0.fhkirqa.mongodb.net
 NODE_ENV=development
+CORS_URL=*
+ACCESS_TOKEN_SECRET=sdfsdfsafhfhjshjfasjkfd32232bbkh232kj23hj23hjk2
+ACCESS_TOKEN_SECRET_EXPIRY=1d
+REFRESH_TOKEN_SECRET=dsADARWCdhsddsDFJAAJL7980sdf
+REFRESH_TOKEN_SECRET_EXPIRY=10d
