register router complete

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ ACCESS_TOKEN_SECRET=sdfsdfsafhfhjshjfasjkfd32232bbkh232kj23hj23hjk2
 ACCESS_TOKEN_SECRET_EXPIRY=1d
 REFRESH_TOKEN_SECRET=dsADARWCdhsddsDFJAAJL7980sdf
 REFRESH_TOKEN_SECRET_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=use-your-cloud-name
+CLOUDINARY_API_KEY=use-your-api-key
+CLOUDINARY_SECRET=use-your-api-secret
