--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://KASHIF:use-your-password@cluster0.fhkirqa.mongodb.net
-NODE_ENV=development
-CORS_URL=*
-ACCESS_TOKEN_SECRET=sdfsdfsafhfhjshjfasjkfd32232bbkh232kj23hj23hjk2
-ACCESS_TOKEN_SECRET_EXPIRY=1d
-REFRESH_TOKEN_SECRET=dsADARWCdhsddsDFJAAJL7980sdf
-REFRESH_TOKEN_SECRET_EXPIRY=10d
-CLOUDINARY_CLOUD_NAME=use-your-cloud-name
-CLOUDINARY_API_KEY=use-your-api-key
-CLOUDINARY_SECRET=use-your-api-secret
+MONGODB_URI=mongodb+srv://hitesh:your-password@cluster0.lxl3fsq.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chai-aur-code
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chai-aur-backend
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
